--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature request
 description: Suggest an idea to improve Wox
-title: "[Feature]: "
+title: "[Feature Request]: "
 labels:
   - enhancement
 assignees:
